# DigitalSynthesizer

./: .gitignore  CMakeLists.txt  README.md  tags
app/OSC/: filter.h  setup_adsr.h  setup_dds.h
app/OSC/src/: filter.c  main.c  setup_ADC_timer.c  setup_adsr.c  setup_dds.c  setup_gpio.c
app/SEQ/: setup_ADC_timer.h  setup_gpio.h
app/SEQ/src/: main.c
app/TEST_MODULE/src/: main.c
common/: BLINK.h  GPIO.h  USART_irq.h  defines.h  waveforms.h  waveforms_generator.h
common/src/: BLINK.c  GPIO.c  USART_irq.c  waveforms_generator.c
others/: plotting.py  plotting2.py
